# sensorflow

./: '  .gitignore  README.md  pyproject.toml  setup.py
configs/: basler_default.yaml  collector_default.yaml  gardasoft_default.yaml  postprocessing_default.yaml  test_lights.yaml
configs/cameras/: basler.yaml  none.yaml
configs/lights/: microtec.yaml
configs/strategies/: light_sequence.yaml  light_sequence_test.yaml
results/: log.txt
scripts/: collect.sh  lights_off.sh  lights_on.sh  test_cameras.sh  test_lights.sh
src/: camera_controller.py  collector.py  collector_bk.py  light_controller.py  log_default.py  main.py  postprocessing.py
src/cameras/basler/: basler.py  basler_bk.py  basler_sensorsizes.yaml  capture_cfg_default.yaml  circular_buffer.py  circular_buffer_bk  synchronization.py  test_basler.py  utils_basler.py
src/lights/gardasoft/: gardasoft.py
src/lights/microtec/: docs.txt  microtec.py
src/outputs/2025-02-13/11-18-35/.hydra/: hydra.yaml
src/outputs/2025-02-13/11-35-51/.hydra/: hydra.yaml
src/tests/: test_camera_controller.py
