[project]
name = "projecttemplate"
version = "0.1.0"
description = "Template project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3.2",
  "numpy>=2.2.2",
  "pypylon>=4.1.0",
  "pytest>=8.3.4",
  "rootutils>=1.0.7",
  "torch>=2.6.0",
  "utils-ema",
]

[tool.uv.sources]
utils-ema = { path = "../../utils_ema" }
