[project]
name = "projecttemplate"
version = "0.1.0"
description = "Template project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3.2",
  "ipdb>=0.13.13",
  "matplotlib>=3.10.3",
  "numpy>=2.2.2",
  "opencv-contrib-python>=4.11.0.86",
  "opencv-python>=4.11.0.86",
  "pynput>=1.8.1",
  "pypylon>=4.1.0",
  "pyserial>=3.5",
  "pytest>=8.3.4",
  "rootutils>=1.0.7",
  "scikit-image>=0.25.2",
  "screeninfo>=0.8.1",
  "torch>=2.6.0",
  "torchvision>=0.22.0",
  "utils-ema",
]

[tool.uv.sources]
utils-ema = { git = "https://github.com/emcaruso/utils.git" }
